# zeroetl

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_ingestion.py
tests/: test_ingestion.py
zeroetl/: __init__.py  ingestion.py  table_management.py
zeroetl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
